[gd_scene load_steps=20 format=3 uid="uid://cyv1v6g5srjk1"]

[ext_resource type="Script" path="res://Enemies/DemoEnemy/demo_enemy.gd" id="1_7uoph"]
[ext_resource type="Texture2D" uid="uid://cdv26x6vef1no" path="res://Enemies/DemoEnemy/target_enemy.png" id="2_f75id"]
[ext_resource type="Script" path="res://Enemies/EnemyData/enemy_ability.gd" id="2_nqjsy"]
[ext_resource type="PackedScene" uid="uid://b35crep84od1i" path="res://Enemies/EnemyAbilities/EnemyBullets/RedBullet.tscn" id="2_olou7"]
[ext_resource type="Script" path="res://Enemies/EnemyData/enemy_effect.gd" id="3_7f1kl"]
[ext_resource type="Script" path="res://Enemies/EnemyData/enemy_data.gd" id="3_vmfyd"]
[ext_resource type="Script" path="res://Enemies/EnemyAbilities/DeathAbility/enemy_death.gd" id="4_6q55h"]
[ext_resource type="Script" path="res://Items/drop_data.gd" id="5_b4mrk"]
[ext_resource type="Resource" uid="uid://b1ax10wl1o1p0" path="res://Items/Coin.tres" id="6_21mn1"]

[sub_resource type="Resource" id="Resource_t1xp5"]
resource_local_to_scene = true
script = ExtResource("4_6q55h")

[sub_resource type="Resource" id="Resource_venkp"]
resource_local_to_scene = true
script = ExtResource("3_vmfyd")
hp = 3
move_speed = 15
knockback = 100
skin = ExtResource("2_f75id")
coins_dropped = 0
sharp_movement = false
touch_damage = 1
death_ability = Array[ExtResource("2_nqjsy")]([SubResource("Resource_t1xp5")])
initial_ability = Array[ExtResource("2_nqjsy")]([])
special_ability = Array[ExtResource("2_nqjsy")]([])
debuffs = Array[ExtResource("3_7f1kl")]([])
boss = false
shooter = false
shooter_chance = 50
bullet = ExtResource("2_olou7")
shoot_speed = 0.0

[sub_resource type="Resource" id="Resource_kuvca"]
script = ExtResource("5_b4mrk")
item_data = ExtResource("6_21mn1")
probability = 70.0

[sub_resource type="Animation" id="Animation_hcxsj"]
resource_name = "Damaged"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.254902), Color(1, 1, 1, 0.705882), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0.745098), Color(1, 1, 1, 0.470588), Color(1, 1, 1, 0.784314), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rwjqo"]
resource_name = "Move"
length = 0.4
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wrm4u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o35pa"]
_data = {
"Damaged": SubResource("Animation_hcxsj"),
"Move": SubResource("Animation_rwjqo"),
"RESET": SubResource("Animation_wrm4u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uehev"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4ig30"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_emnjt"]
radius = 6.0

[node name="DemoEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 17
motion_mode = 1
script = ExtResource("1_7uoph")
stats = SubResource("Resource_venkp")
item_drops = Array[ExtResource("5_b4mrk")]([SubResource("Resource_kuvca")])

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_o35pa")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_uehev")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
visible = false
shape = SubResource("CircleShape2D_4ig30")
debug_color = Color(0.97, 0, 0.0969999, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource("CircleShape2D_emnjt")
debug_color = Color(0.698224, 0.489977, 0.15621, 0.42)
